[package]
name = "etrace"
version = "0.2.7"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
description = "This library provides some structs and macros to create stackable/traceable errors for your own custom errors"
license = "BSD 2-Clause OR MIT"
readme = "README.md"

[dependencies]
