[package]
name = "etrace"
version = "1.1.1"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
description = "This library provides some structs and macros to create stackable/traceable errors for your own custom errors"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/etrace"
readme = "README.md"

[dependencies]
